--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.datasource.url=jdbc:h2:mem:stockdb
-spring.datasource.username='sa'
-spring.datasource.password='sa;
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
-spring.jpa.hibernate.ddl-auto = update
-
+spring.jpa.hibernate.ddl-auto = create
+server.port=8080
