--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
 spring.jpa.hibernate.ddl-auto = create
 server.port=8080
+jwt.secret=SomeTextInRandom
+jwt.expirationInMs=5000
