--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.hibernate.ddl-auto = create
 server.port=8080
 jwt.secret=SomeTextInRandom
 jwt.expirationInMs=5000
+
+#Email Sending
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stockmarket.iiht@gmail.com
+spring.mail.password=dummy159
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
